[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15", features = ["full"] }
structopt = "0.3"
serde_json = "1.0"
home = "0.5"
anyhow = "1.0"
console ="0.15"

[dependencies.chrono]
features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "0.4"

[dependencies.serde]  # Add serde in its own section.
features = ["derive"] # We'll need the derive feature.
version = "1.0"
